src/objects/Task__c.object
<CustomObject>
    <fields>
        <fullName>Actual_LOE__c</fullName>
        <label>Actual LOE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32767</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dev_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dev Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tasks (Dev Owner)</relationshipLabel>
        <relationshipName>DevOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_LOE__c</fullName>
        <label>Estimated LOE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Close_Date__c</fullName>
        <label>Expected Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>P1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QA_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tasks (QA Owner)</relationshipLabel>
        <relationshipName>QAOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Notes__c</fullName>
        <label>Status Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Story_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>StoryOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Story</label>
        <referenceTo>Story__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task_Number__c</fullName>
        <displayFormat>T-{000000}</displayFormat>
        <label>Task Number</label>
        <type>AutoNumber</type>
    </fields>
    <label>Task</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>